<resources>
    <string name="app_name">My Store</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Увійти</string>
    <string name="goToRegistration"><u>Не маєте облікового запису? Зареєструватись</u></string>
    <string name="authorization_text">Авторизація</string>
    <string name="registration_text">Реєстрація</string>
    <string name="register_button_text">Зареєструватись</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="choosespinner">chooseSpinner</string>
    <string name="basket">Кошик</string>
    <string name="order_placed">Оформлені \nзамовлення</string>
    <string name="product_name">Product name</string>
    <string name="product_count">Кількість:</string>
    <string name="toBasket">В кошик</string>
    <string name="itemInMagazine">штук на складі:</string>
    <string name="product_id_text">ID товару:</string>
    <string name="id">ID:</string>
    <string name="cart">Кошик</string>
    <string name="clear_cart">Очистити\nкорзину</string>
    <string name="custom_text">Замовлення №</string>
    <string name="status_text">Статус:</string>
    <string name="create_custom_text">Оформити\nзамовлення</string>
    <string name="my_customs_text">Мої\nзамовлення</string>
    <string name="user_profile_text">Профіль користувача</string>
    <string name="customer_name">Ім\'я:</string>
    <string name="customer_surname">Прізвище:</string>
    <string name="customer_email">Email:</string>
    <string name="logout">Вийти з аккаунту</string>
    <string name="my_profile_text">Мій профіль</string>
    <string name="created_customs_text">Створені замовлення</string>
    <string name="assign_employee_text">передати\nробітнику</string>
    <string name="employee_id_text">Робітник №</string>
    <string name="choose_text">Призначити</string>
    <string name="custom_in_progress_text">Замовлення в процесі</string>
    <string name="create_report_text">Звіт</string>
    <string name="report_text">Звіт</string>
    <string name="report_id_text">для замовлення №</string>
    <string name="report_text_hint">report text</string>
    <string name="send_report">Відправити звіт</string>
    <string name="my_customs">Мої замовлення:</string>
    <string name="processed_customs">Виконані замовлення</string>
    <string name="my_reports">Мої звіти:</string>
    <string name="rejected_reports">Відхилені звіти</string>
    <string name="accepted_reports">Прийняті звіти</string>
    <string name="waiting_reports">Звіти в очікуванні</string>
    <string name="send_text">Відправити</string>
    <string name="text_report_id">Звіт №</string>
    <string name="for_custom_text">для замовлення №</string>
    <string name="text_report_head">Зміст звіту</string>
    <string name="accept_report_text">Прийняти звіт</string>
    <string name="reject_report_text">Відхилити звіт</string>
    <string name="customs_history_text">Історія замовлень</string>
    <string name="customer">Замовник №</string>
    <string name="product_list_text">Перелік товарів</string>
    <string name="add_product_text">Додати продукт</string>
    <string name="add_product_to_dt_text">Додати товар до бази</string>
    <string name="name_product">Назва товару:</string>
    <string name="named_text">найменування</string>
    <string name="quantity">Кількість товару:</string>
    <string name="quantity_hint">к-сть шт.</string>
    <string name="product_desc_text">Опис товару:</string>
    <string name="desc_hint">опис товару</string>
    <string name="add_text">Додати</string>
    <string name="personnel_management">Управління персоналом</string>
    <string name="add_new_employee">Додати нового робітника</string>
    <string name="remove">Видалити</string>
    <string name="password_text">Пароль:</string>
    <string name="add">Додати</string>
    <string name="employee_registration">Реєстрація робітника</string>
    <string name="admin_mode">Режим адміністратора</string>
    <string name="input_pin">Введіть PIN</string>
    <string name="log_text">Ввійти</string>
    <string name="admin_page">Сторінка адміністратора</string>
    <string name="manage_managers">Управління менеджерами</string>
    <string name="manage_departments">Управління відділами</string>
    <string name="add_manager">Додати менеджера</string>
    <string name="manager_id_text">Менеджер №</string>
    <string name="accepted_depart">Призначені відділи:</string>
    <string name="accept_depart">Призначити відділ</string>
    <string name="depart">Відділ:</string>
    <string name="choose_depart">Оберіть відділ:</string>
    <string name="manager_registration">Реєстрація менеджера</string>
    <string name="departs">Відділи:</string>
    <string name="add_depart_text">Додати відділ</string>
    <string name="edit_departs">Редагування відділів</string>
    <string name="depart_name">Назва відділу:</string>
    <string name="depart_text">Відділ доставки:</string>
    <string name="choose_depart_text">Оберіть відділ доставки:</string>
    <string name="product_сatalog">Каталог товарів</string>
    <string name="depart_registration">Додати відділ</string>
    <string name="success_reg_message">Реєстрація пройшла успішно! Ваш ID користувача: %1$s</string>
    <string name="invalid_reg_message">Користувач з таким логіном вже існує!</string>
    <string name="name_required">Ім\'я обов\'язкове!</string>
    <string name="surname_required">Прізвище обов\'язкове!</string>
    <string name="email_required">Email обов\'язковий!</string>
    <string name="password_required">Пароль обов\'язковий!</string>
    <string name="success_log">Вхід під логіном: %1$s виконано успішно!</string>
    <string name="invalid_log">Невірний логін чи пароль!</string>
    <string name="success_add_to_cart">Товар додано до корзини</string>
    <string name="error_add_to_cart">Помилка: %1$s</string>
    <string name="error_info_product">Помилка інформації про продукт</string>
    <string name="product_removed_form_cart">Товар видалено з корзини</string>
    <string name="cart_cleaned">Корзину очищено</string>
    <string name="assign_custom_to_employee">Для замовлення № %1$s призначений робітник № %2$s</string>
    <string name="error_custom_id">ID замовлення некоректне!</string>
    <string name="add_product_null_check">Поля name, quantity та price мають бути заповнені!</string>
    <string name="provide_product_null_check">Поля name, quantity мають бути заповнені!</string>
    <string name="success_add_product">Товар додано до бази данних! ID товару: %1$d</string>
    <string name="null_check">Всі поля мають бути заповнені!</string>
    <string name="invalid_pin">Пін-код невірний!</string>
    <string name="search_hint">Пошук</string>
    <string name="search_hint_by_id">Пошук по ID</string>
    <string name="product_list">Список товарів</string>
    <string name="main_page">Головне меню</string>
    <string name="search_type">Тип пошуку:</string>
    <string name="price_range">ціновий діапазон</string>
    <string name="min_price">Мін. ціна</string>
    <string name="max_price">Макс. ціна</string>
    <string name="price">Ціна:</string>
    <string name="price_symb">$</string>
    <string name="wrong_create_custom">Помилка оброблення замовлення!</string>
    <string name="success_create_custom">Замовлення № %1$d прийнято!</string>
    <string name="product_price">Ціна товару:</string>
    <string name="price_hint">ціна в $</string>
    <string name="add_product_error">Помилка додавання продукту!</string>
    <string name="custom_not_found">Замовлення не знайдено!</string>
    <string name="search_product_error">Продукт не знайдено</string>
    <string name="repeat_password">Повторіть пароль:</string>
    <string name="depart_message">Відділ: %1$s, ID відділу: %2$d</string>
    <string name="staff_list">Cписок персоналу</string>
    <string name="myisam_mode">MyISAM mode:</string>
    <string name="choose_your_birthday">Оберіть вашу дату народження:</string>
    <string name="min_age"> Мінімальний вік: 5 років!</string>
    <string name="invalid_email">Невірний формат email!</string>
    <string name="nationality">Національність:</string>
    <string name="sex_choose">Обери стать:</string>
    <string name="Men">Чоловік</string>
    <string name="Woman">Жінка</string>
    <string name="gender_required">Стать не обрана!</string>
    <string name="nationality_required">Національність не обрана</string>
    <string name="forget_password">Не пам\'ятаю пароль</string>
    <string name="restore_password">На ваш email вислано інструкції з відновленню паролю!</string>
    <string name="file_manage">Управління файлами</string>
    <string name="to_create_folder">Створити папку</string>
    <string name="ht_folder_name">Назва папки:</string>
    <string name="server_files">Файли на сервері</string>
    <string name="ht_full_way_to_folder">Введіть шлях до теки:</string>
    <string name="bt_file_search">Пошук</string>
    <string name="public_url">public URL:</string>
    <string name="file_size">Розмір:</string>
    <string name="url">URL:</string>
    <string name="created_on">Створено:</string>
    <string name="tv_file_choose">Обрати файл</string>
    <string name="upload_to_server_text">Завантажити файл на сервер</string>
    <string name="ht_username">Введіть ім\'я користувача:</string>
    <string name="age">Вік:</string>
    <string name="gender">Стать:</string>
    <string name="data_update">Оновлення даних</string>
    <string name="save_update">Зберегти зміни</string>
    <string name="update_date">Змінити мої дані</string>
    <string name="update_notification_text">Після оновлення потрібно заново авторизуватись!</string>
    <string name="choose_file">Обрати файл:</string>
    <string name="tvMyLocation">Відслідковувати моє місце розташування</string>
    <string name="add_place">Додати місце</string>
    <string name="remove_place">Видалити місце</string>
    <string name="search_place">Шукати на мапі</string>
    <string name="add_my_location">Додати моє місцерозташування</string>
    <string name="choose_on_map">Обрати на карті</string>
    <string name="my_places">Мої місця</string>
    <string name="et_place_desc">Введіть опис місця:</string>
    <string name="tw_description">Опис:</string>
    <string name="tv_location">Локація:</string>
    <string name="update_photo">Оновити фото</string>
    <string name="photo_url">(optional) URL:</string>
    <string name="confirm">Підтвердити</string>
    <string name="tags">Теги:</string>
    <string name="ht_tags">Введіть теги:</string>
    <string name="image">Зображення:</string>
    <string name="add_image">Додати зображення</string>
    <string name="image_not_exists">Зображення не обрано</string>
    <string name="saved_places">Збережені місця:</string>
    <string name="list_of_places">Список місць</string>
    <string name="ht_place">Введіть місце:</string>
    <string name="ht_category">Введіть категорію:</string>
    <string name="et_search_query">Введіть пошуковий запит:</string>
    <string name="bt_name">назва</string>
    <string name="category">категорія</string>
    <string name="distance">відстань</string>
    <string name="user">Користувач:</string>
    <string name="distance_to_me">Відстань від мене:</string>
    <string name="km">км</string>
    <string name="my_friends">Мої друзі</string>
    <string name="add_friends">Додати друзів</string>
    <string name="invitation_to_me">Заявки в друзі</string>
    <string name="myFriends">Мої друзі</string>
    <string name="search_friends">Пошук друзів</string>
    <string name="add_friend">Додати друга</string>
    <string name="invite_was_sent">Заявку надіслано</string>
    <string name="accept_query">Прийняти запит</string>
    <string name="reject_query">Відхилити запит</string>
    <string name="to_developer">Розробнику</string>
</resources>