<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/add_product_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/add_product_to_dt_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_product"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_product_head"
        android:layout_marginTop="32dp"
        android:layout_marginStart="60dp" />

    <EditText
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:inputType="textPersonName"
        android:hint="@string/named_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name_text"
        android:layout_margin="16dp" />

    <TextView
        android:id="@+id/product_quantity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name"
        android:layout_marginTop="20dp"
        android:layout_marginStart="60dp"
        android:visibility="gone"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/product_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="number"
        android:hint="@string/quantity_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_quantity_text"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/product_price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_price"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_quantity"
        android:layout_marginTop="20dp"
        android:layout_marginStart="60dp"
        android:visibility="gone"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:ems="5"
        android:hint="@string/price_hint"
        android:inputType="number|numberDecimal"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_price_text"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/product_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_desc_text"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_price"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/product_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:lines="7"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/desc_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_description_text"
        android:layout_margin="16dp"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/add_product_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_description"
        android:layout_margin="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>