<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/et_main_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_page"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp"
        android:textSize="32sp" />

    <Button
        android:id="@+id/button_file_manage"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:text="@string/file_manage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_main_page" />


    <Button
        android:id="@+id/button_to_profile"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/my_profile_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_file_manage" />

    <Switch
        android:id="@+id/sw_turn_my_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvMyLocation"
        android:layout_margin="32dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_to_profile"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/bt_my_places"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_places"
        android:layout_margin="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_turn_my_location" />

</androidx.constraintlayout.widget.ConstraintLayout>